modified index page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Global Data Exchange</title>
+	<title>Letiy</title>
 </head>
 <body>
-	<h1> The global data exchange is running.</h1>
+	<h1> The letiy website.</h1>
 </body>
 </html>
